add tress.html page with static content

--- a/StaticLogin/landing.html
+++ b/StaticLogin/landing.html
@@ -184,7 +184,7 @@
       <button class="category-btn active">Geography</button>
       <a href="cars.html" class="category-btn" style="text-decoration:none;display:block;">Cars</a>
       <a href="llm.html" class="category-btn" style="text-decoration:none;display:block;">LLM Models</a>
-      <button class="category-btn">Trees</button>
+      <a href="trees.html" class="category-btn" style="text-decoration:none;display:block;">Trees</a>
     </nav>
     <div class="container">
       <button class="logout-btn" id="logoutBtn">Logout</button>
